[gd_scene load_steps=53 format=2]

[ext_resource path="res://world.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/backgrounds/world_bg2.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/wall.png" type="Texture" id=3]
[ext_resource path="res://base.gd" type="Script" id=4]
[ext_resource path="res://player.gd" type="Script" id=5]
[ext_resource path="res://assets/sprites/player/idle/character.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/player/players_left_movement/sprite_left_animation0.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/player/players_left_movement/sprite_left_animation1.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/player/players_left_movement/sprite_left_animation2.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/player/players_left_movement/sprite_left_animation3.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/player/player_right_movement/sprite_right_animation0.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/player/player_right_movement/sprite_right_animation1.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/player/player_right_movement/sprite_right_animation2.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/player/player_right_movement/sprite_right_animation3.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/player/player_throw/sprite_player_throw0.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/player/player_throw/sprite_player_throw1.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/player/player_throw/sprite_player_throw2.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/player/player_throw/sprite_player_throw3.png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/player/player_throw/sprite_player_throw4.png" type="Texture" id=19]
[ext_resource path="res://assets/sprites/player_dance/player_dance0.png" type="Texture" id=20]
[ext_resource path="res://assets/sprites/player_dance/player_dance1.png" type="Texture" id=21]
[ext_resource path="res://assets/sprites/player_dance/player_dance2.png" type="Texture" id=22]
[ext_resource path="res://assets/sprites/player_dance/player_dance3.png" type="Texture" id=23]
[ext_resource path="res://assets/sprites/player_dance/player_dance4.png" type="Texture" id=24]
[ext_resource path="res://assets/sprites/player_dance/player_dance5.png" type="Texture" id=25]
[ext_resource path="res://assets/sprites/player_dance/player_dance6.png" type="Texture" id=26]
[ext_resource path="res://assets/sprites/coin.png" type="Texture" id=27]
[ext_resource path="res://assets/sprites/health2.png" type="Texture" id=28]
[ext_resource path="res://assets/sprites/health3.png" type="Texture" id=29]
[ext_resource path="res://assets/sprites/knife_button_icon/sprite_0.png" type="Texture" id=30]
[ext_resource path="res://assets/sprites/knife_button_icon/knife_button_icon.png" type="Texture" id=31]
[ext_resource path="res://assets/sprites/water/sprite_0.png" type="Texture" id=32]
[ext_resource path="res://assets/sprites/icons/water_icon.png" type="Texture" id=33]
[ext_resource path="res://assets/sprites/hammer_mjolnir.png" type="Texture" id=34]
[ext_resource path="res://assets/sprites/icons/hammer_icon.png" type="Texture" id=35]
[ext_resource path="res://assets/sprites/cricket_bat.png" type="Texture" id=36]
[ext_resource path="res://assets/sprites/icons/bat_icon.png" type="Texture" id=37]
[ext_resource path="res://menus/pause_menu.tscn" type="PackedScene" id=38]
[ext_resource path="res://menus/game_over_menu.tscn" type="PackedScene" id=39]
[ext_resource path="res://assets/sounds/One_Piece_OST_Overtaken.ogg" type="AudioStream" id=40]
[ext_resource path="res://assets/sprites/shield.png" type="Texture" id=41]
[ext_resource path="res://assets/sprites/healthkit-20190315-121632.png" type="Texture" id=42]
[ext_resource path="res://assets/sprites/slowmo.png" type="Texture" id=43]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 45.9482, 10 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 48.5045, 10 )

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "left_run",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "right_run",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "throw",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "dance",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 30.9351, 32.0334 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=9]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Node2D" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="." index="0"]

position = Vector2( 398.739, 254.61 )
scale = Vector2( 0.849796, 0.929797 )
texture = ExtResource( 2 )

[node name="attack1" type="Node2D" parent="." index="1"]

position = Vector2( 220.822, 521.93 )
scale = Vector2( 0.983276, 1.07046 )

[node name="attack2" type="Node2D" parent="." index="2"]

position = Vector2( 510.822, 521.93 )
scale = Vector2( 0.983276, 1.07046 )

[node name="attack3" type="Node2D" parent="." index="3"]

position = Vector2( 807.23, 523.158 )
scale = Vector2( 0.983276, 1.07046 )

[node name="leftWall" type="StaticBody2D" parent="." index="4"]

position = Vector2( 108.59, 333.367 )
scale = Vector2( 1.60657, 4.99371 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision", "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="leftWall" index="0"]

position = Vector2( 0, -0.20352 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftWall" index="1"]

visible = false
position = Vector2( -3.43788, 8.02983 )
scale = Vector2( 3.12986, 3.73818 )
shape = SubResource( 1 )
disabled = true

[node name="mleftWall" type="StaticBody2D" parent="." index="5"]

position = Vector2( 391.797, 238.831 )
scale = Vector2( 0.899745, 6.68186 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="mleftWall" index="0"]

position = Vector2( 0, 3.33114 )
scale = Vector2( 1, 0.483654 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="mleftWall" index="1"]

visible = false
position = Vector2( 41.1655, 1.76105 )
scale = Vector2( 3.12986, 3.07693 )
shape = SubResource( 2 )
disabled = true

[node name="mrightWall" type="StaticBody2D" parent="." index="6"]

position = Vector2( 656.928, 251.242 )
scale = Vector2( 0.63305, 6.21731 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="mrightWall" index="0"]

position = Vector2( 31.1743, 1.26413 )
scale = Vector2( 1.56815, 0.522269 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="mrightWall" index="1"]

visible = false
position = Vector2( 0.423584, -0.182852 )
scale = Vector2( 3.12986, 3.07693 )
shape = SubResource( 2 )
disabled = true

[node name="rightWall" type="StaticBody2D" parent="." index="7"]

position = Vector2( 952.812, 300.412 )
scale = Vector2( 1.05508, 9.01618 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="rightWall" index="0"]

position = Vector2( 24.2686, 4.21694 )
scale = Vector2( 1.6335, 0.535986 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightWall" index="1"]

visible = false
position = Vector2( 27.5664, -5.99412 )
scale = Vector2( 3.12986, 3.60689 )
shape = SubResource( 2 )
disabled = true

[node name="base1" type="Area2D" parent="." index="8"]

editor/display_folded = true
position = Vector2( 234.301, 546.753 )
scale = Vector2( 2.41711, 4.56565 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 4 )
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="base1" index="0"]

position = Vector2( -0.635106, 0 )
scale = Vector2( 0.990075, 1 )
shape = SubResource( 3 )

[node name="base2" type="Area2D" parent="." index="9"]

editor/display_folded = true
position = Vector2( 527.464, 546.002 )
scale = Vector2( 2.41711, 4.56565 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="base2" index="0"]

position = Vector2( -5.80472, 0 )
scale = Vector2( 1.01353, 1 )
shape = SubResource( 3 )

[node name="base3" type="Area2D" parent="." index="10"]

editor/display_folded = true
position = Vector2( 813.489, 541.792 )
scale = Vector2( 2.41711, 4.56565 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="base3" index="0"]

position = Vector2( -5.80472, 0 )
scale = Vector2( 1.01353, 1 )
shape = SubResource( 3 )

[node name="emit2" type="Node2D" parent="." index="11"]

position = Vector2( 512.285, -87.8676 )
scale = Vector2( 1, 1.10457 )

[node name="emit3" type="Node2D" parent="." index="12"]

position = Vector2( 784.484, -67.0916 )

[node name="emit1" type="Node2D" parent="." index="13"]

position = Vector2( 222.182, -62.0811 )

[node name="Player" type="KinematicBody2D" parent="." index="14"]

position = Vector2( 510.822, 515.93 )
scale = Vector2( 0.983276, 1.07046 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 5 )
_sections_unfolded = [ "Pickable" ]

[node name="Sprite" type="AnimatedSprite" parent="Player" index="0"]

frames = SubResource( 4 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player" index="1"]

position = Vector2( -5.1689, -7.13049 )
scale = Vector2( 1.15232, 1.62176 )
shape = SubResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="Player" index="2"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Timer" type="Timer" parent="." index="15"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="score" type="RichTextLabel" parent="." index="16"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 513.0
margin_top = 13.0
margin_right = 621.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 5
text = "0"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Grow Direction", "Rect" ]

[node name="coins" type="Sprite" parent="." index="17"]

position = Vector2( 495.924, 19.0387 )
scale = Vector2( 0.431994, 0.403351 )
texture = ExtResource( 27 )
__meta__ = {
"_edit_group_": true
}

[node name="health" type="RichTextLabel" parent="." index="18"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 127.0
margin_top = 13.0
margin_right = 217.0
margin_bottom = 53.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Health : "
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Rect" ]

[node name="HealthTextureProgress" type="TextureProgress" parent="." index="19"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 182.0
margin_top = 14.0
margin_right = 282.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 28 )
texture_over = null
texture_progress = ExtResource( 29 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Textures" ]

[node name="leftContainer" type="VBoxContainer" parent="." index="20"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -9.0
margin_top = 178.0
margin_right = 131.0
margin_bottom = 456.0
rect_min_size = Vector2( 100, 100 )
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 10
alignment = 0
_sections_unfolded = [ "Rect", "Size Flags", "custom_constants" ]
__meta__ = {
"_edit_group_": true
}

[node name="knife" type="TextureButton" parent="leftContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 140.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 30 )
texture_pressed = ExtResource( 31 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="water" type="TextureButton" parent="leftContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 130.0
margin_right = 140.0
margin_bottom = 258.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 32 )
texture_pressed = ExtResource( 33 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="rightContainer" type="VBoxContainer" parent="." index="21"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 955.0
margin_top = 188.0
margin_right = 1115.0
margin_bottom = 519.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_edit_group_": true
}

[node name="hammer" type="TextureButton" parent="rightContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 160.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 34 )
texture_pressed = ExtResource( 35 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Bat" type="TextureButton" parent="rightContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 164.0
margin_right = 160.0
margin_bottom = 324.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 36 )
texture_pressed = ExtResource( 37 )
_sections_unfolded = [ "Rect", "Size Flags", "Textures", "Theme", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="Pause" type="Button" parent="." index="22"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 984.0
margin_top = 10.0
margin_right = 1012.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "||"
flat = false
align = 1
_sections_unfolded = [ "Pause" ]
__meta__ = {
"_edit_group_": true
}

[node name="pauseMenu" parent="." index="23" instance=ExtResource( 38 )]

pause_mode = 2
visible = false
_sections_unfolded = [ "Pause" ]

[node name="gameOver" parent="." index="24" instance=ExtResource( 39 )]

pause_mode = 2
visible = false
_sections_unfolded = [ "Pause" ]

[node name="backgroundSound" type="AudioStreamPlayer" parent="." index="25"]

stream = ExtResource( 40 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="collisionSound" type="AudioStreamPlayer2D" parent="." index="26"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="left" type="TouchScreenButton" parent="." index="27"]

position = Vector2( 232.86, 338.327 )
scale = Vector2( 12.9058, -23.2846 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 6 )
shape_centered = false
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="middle" type="TouchScreenButton" parent="." index="28"]

position = Vector2( 516.547, 304.39 )
scale = Vector2( 12.9058, -25.017 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 6 )
shape_centered = false
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="right" type="TouchScreenButton" parent="." index="29"]

position = Vector2( 797.758, 330.422 )
scale = Vector2( 12.6281, -24.4546 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 6 )
shape_centered = false
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="leftDestination" type="Area2D" parent="." index="30"]

position = Vector2( 235.732, 524.737 )
scale = Vector2( 0.641512, 0.617433 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftDestination" index="0"]

shape = SubResource( 7 )

[node name="middleDestination" type="Area2D" parent="." index="31"]

position = Vector2( 516.884, 530.876 )
scale = Vector2( 0.641512, 0.617433 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="middleDestination" index="0"]

shape = SubResource( 8 )

[node name="rightDestination" type="Area2D" parent="." index="32"]

position = Vector2( 807.858, 525.965 )
scale = Vector2( 0.641512, 0.617433 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightDestination" index="0"]

shape = SubResource( 9 )

[node name="Label" type="Label" parent="." index="33"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 477.479
margin_top = 49.9242
margin_right = 553.479
margin_bottom = 63.9242
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HBoxContainer" type="Container" parent="." index="34"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 410.0
margin_top = 560.0
margin_right = 700.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="shield_img" type="Sprite" parent="HBoxContainer" index="0"]

position = Vector2( 201, -8 )
scale = Vector2( 0.203125, 0.1875 )
texture = ExtResource( 41 )

[node name="shield" type="Button" parent="HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 161.0
margin_right = 241.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Shield"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="healthkit_img" type="Sprite" parent="HBoxContainer" index="2"]

position = Vector2( 97, -9 )
scale = Vector2( 0.34375, 0.34375 )
texture = ExtResource( 42 )

[node name="healthkit" type="Button" parent="HBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 61.0
margin_right = 141.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "HealthKit"
flat = false
align = 1

[node name="xspeed_img" type="Sprite" parent="HBoxContainer" index="4"]

position = Vector2( 1, -12 )
scale = Vector2( 0.34375, 0.34375 )
texture = ExtResource( 43 )

[node name="xspeed" type="Button" parent="HBoxContainer" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -40.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "SlowMo"
flat = false
align = 1
_sections_unfolded = [ "Material" ]

[connection signal="body_entered" from="base1" to="." method="_on_1_body_entered"]

[connection signal="body_entered" from="base2" to="." method="_on_2_body_entered"]

[connection signal="body_entered" from="base3" to="." method="_on_3_body_entered"]

[connection signal="animation_finished" from="Player/Sprite" to="Player" method="_on_Sprite_animation_finished"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="pressed" from="leftContainer/knife" to="Player" method="_on_knife_pressed"]

[connection signal="pressed" from="leftContainer/water" to="Player" method="_on_water_pressed"]

[connection signal="pressed" from="rightContainer/hammer" to="Player" method="_on_hammer_pressed"]

[connection signal="pressed" from="rightContainer/Bat" to="Player" method="_on_Bat_pressed"]

[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]

[connection signal="pressed" from="left" to="Player" method="_on_left_pressed"]

[connection signal="pressed" from="middle" to="Player" method="_on_middle_pressed"]

[connection signal="pressed" from="right" to="Player" method="_on_right_pressed"]

[connection signal="body_entered" from="leftDestination" to="Player" method="_on_leftDestination_body_entered"]

[connection signal="body_entered" from="middleDestination" to="Player" method="_on_middleDestination_body_entered"]

[connection signal="body_entered" from="rightDestination" to="Player" method="_on_rightDestination_body_entered"]

[connection signal="pressed" from="HBoxContainer/shield" to="." method="_on_shield_pressed"]

[connection signal="pressed" from="HBoxContainer/healthkit" to="." method="_on_healthkit_pressed"]

[connection signal="pressed" from="HBoxContainer/xspeed" to="." method="_on_xspeed_pressed"]


